k8s/phpmyadmin/middleware-pma-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: pma-redirect-https
    namespace: portfoliov3-api
spec:
    redirectScheme:
        scheme: https
        permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: pma-headers
    namespace: portfoliov3-api
spec:
    headers:
        customRequestHeaders:
            X-Forwarded-Proto: https
