k8s/phpmyadmin/deployment-pma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: phpmyadmin
    namespace: portfoliov3-api
spec:
    selector:
        matchLabels:
            app: phpmyadmin
    template:
        metadata:
            labels:
                app: phpmyadmin
        spec:
            containers:
                - name: phpmyadmin
                  image: phpmyadmin:5
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: pma-config
                        mountPath: /etc/phpmyadmin/config.user.inc.php
                        subPath: config.user.inc.php
            volumes:
                - name: pma-config
                  configMap:
                      name: phpmyadmin-config
