k8s/phpmyadmin/service-pma.yaml
apiVersion: v1
kind: Service
metadata:
    name: phpmyadmin
    namespace: portfoliov3-api
spec:
    selector:
        app: phpmyadmin
    ports:
        - port: 80
          targetPort: 80
